Support MRT=false